--- a/_layouts/cv.html
+++ b/_layouts/cv.html
@@ -4,14 +4,9 @@ layout: default
 <!-- page.html -->
         <div class="post">
 
-          <header class="post-header">
-            <a href="/assets/CV.pdf" class="btn btn-cv pull-right" title="Download CV as PDF">Download CV (PDF)</a>
-            <h1 class="post-title">{{ page.title }}</h1> 
-            <p class="post-description">{{ page.description }}</p>
-          </header>
-
-          <article>
-            {{ content }}
-          </article>
+          <object data="../assets/CV.pdf#pagemode=none" width="750" height="1000" type='application/pdf'></object>
 
         </div>
+
+
+        
