--- a/_includes/header.html
+++ b/_includes/header.html
@@ -96,6 +96,11 @@
               {% endfor -%}
               {%- if site.enable_darkmode %}
 
+              <!-- CV -->
+	      <li class="nav-item {% if page.title == 'CV' %}active{% endif %}">
+	       <a class="nav-link" target="_blank" href="{{ '/assets/CV.pdf' | relative_url }}">cv</a>
+	      </li>
+
               <!-- Toogle theme mode -->
               <li class="toggle-container">
                 <button id="light-toggle" title="Change theme">
